Optimized Privilege Evaluation (#4380)
Signed-off-by: Nils Bandener <nils.bandener@eliatra.com>